--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 axum = { version = "0.7.9" }
 
 tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
+
+tracing = "0.1.40"
+
+tracing-subscriber = "0.3.18"
+
+tower-http = { version = "0.6.2", features = ["trace"] }
