--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 tower-http = { version = "0.6.2", features = ["trace"] }
+
+serde = { version = "1.0.215", features = ["serde_derive"] }
